--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,7 +15,13 @@ steps:
     versionSpec: '14'
   displayName: 'Install Node.js'
 
-- script: |
-    npm install
-    npm run build
-  displayName: 'npm install and build'
+- task: Npm@1
+  inputs:
+     command: 'install'
+- task: ArchiveFiles@2
+  inputs:
+    rootFolderOrFile: '$(System.DefaultWorkingDirectory)'
+    includeRootFolder: false
+- task: PublishPipelineArtifact@0
+  inputs:
+    targetPath: '$(System.ArtifactsDirectory)'
